// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UploadPhoto renders default state and disables submit 1`] = `
<div>
  <div
    class="sc-dtInlp"
  >
    <div
      class="sc-eDPEui mhmKh"
    />
    <form>
      <div
        class="sc-kOPcWA cwaRxo"
      >
        <div
          class="sc-cWSHoS dmVEML"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          Загрузить фото
        </div>
      </div>
      <div
        class="sc-fhzFiN ZooRL"
      >
        <label
          class="sc-iGgWBk ildUPc"
        >
          <input
            class="sc-gsFSXt dbMBul"
            type="checkbox"
          />
          <span
            class="sc-kAycey bFgwAS"
          />
          <span
            class="sc-imWYAH jBgRds"
          >
            Скрыть
          </span>
        </label>
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-country"
          >
            Страна
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-city"
          >
            Город
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-tags"
          >
            Теги
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <button
        class="sc-dLMFT ckNJCs"
        disabled=""
        type="submit"
      >
        Загрузить фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto shows error message when upload fails 1`] = `
<div>
  <div
    class="sc-dtInlp"
  >
    <div
      class="sc-eDPEui mhmKh"
    >
      boom
    </div>
    <form>
      <div
        class="sc-kOPcWA cwaRxo"
      >
        <div
          class="sc-cWSHoS dmVEML"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          1 файл выбран
        </div>
      </div>
      <div
        class="sc-fhzFiN ZooRL"
      >
        <label
          class="sc-iGgWBk ildUPc"
        >
          <input
            class="sc-gsFSXt dbMBul"
            type="checkbox"
          />
          <span
            class="sc-kAycey bFgwAS"
          />
          <span
            class="sc-imWYAH jBgRds"
          >
            Скрыть
          </span>
        </label>
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-country"
          >
            Страна
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-city"
          >
            Город
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-tags"
          >
            Теги
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-dCFHLc hOOKmm"
      >
        <div
          class="sc-kOHTFy eefjsO"
        >
          photo.jpg
           | 
          image/jpeg
           · 
          4 B
           · Canon M50
           · 01.01.2020, 03:00:00
           · 1.000000, 2.000000 · 3m
        </div>
      </div>
      <button
        class="sc-dLMFT ePPioQ"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto submits files and shows success message 1`] = `
<div>
  <div
    class="sc-dtInlp"
  >
    <div
      class="sc-eDPEui mhmKh"
    />
    <form>
      <div
        class="sc-kOPcWA cwaRxo"
      >
        <div
          class="sc-cWSHoS dmVEML"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          1 файл выбран
        </div>
      </div>
      <div
        class="sc-lcIPJf gPMmyM"
      >
        Загружено: 1 из 1. Ошибок: 0
      </div>
      <div
        class="sc-fhzFiN ZooRL"
      >
        <label
          class="sc-iGgWBk ildUPc"
        >
          <input
            class="sc-gsFSXt dbMBul"
            type="checkbox"
          />
          <span
            class="sc-kAycey bFgwAS"
          />
          <span
            class="sc-imWYAH jBgRds"
          >
            Скрыть
          </span>
        </label>
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-country"
          >
            Страна
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-city"
          >
            Город
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-tags"
          >
            Теги
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-dCFHLc hOOKmm"
      >
        <div
          class="sc-kOHTFy eefjsO"
        >
          photo.jpg
           | 
          image/jpeg
           · 
          4 B
           · Canon M50
           · 01.01.2020, 03:00:00
           · 1.000000, 2.000000 · 3m
        </div>
      </div>
      <button
        class="sc-dLMFT ePPioQ"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto updates label and shows selected file 1`] = `
<div>
  <div
    class="sc-dtInlp"
  >
    <div
      class="sc-eDPEui mhmKh"
    />
    <form>
      <div
        class="sc-kOPcWA cwaRxo"
      >
        <div
          class="sc-cWSHoS dmVEML"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          1 файл выбран
        </div>
      </div>
      <div
        class="sc-fhzFiN ZooRL"
      >
        <label
          class="sc-iGgWBk ildUPc"
        >
          <input
            class="sc-gsFSXt dbMBul"
            type="checkbox"
          />
          <span
            class="sc-kAycey bFgwAS"
          />
          <span
            class="sc-imWYAH jBgRds"
          >
            Скрыть
          </span>
        </label>
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-country"
          >
            Страна
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-city"
          >
            Город
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-jxOSlu dfhtNa"
      >
        <div
          class="sc-jlZhev fTWaMY"
        >
          <label
            class="sc-jEACwF iYthgV"
            for="upload-photo-tags"
          >
            Теги
          </label>
          <input
            class="sc-cwHptO LvpCg"
            id="upload-photo-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
          />
        </div>
        <div
          class="sc-feUZmx kqTaa"
        />
      </div>
      <div
        class="sc-dCFHLc hOOKmm"
      >
        <div
          class="sc-kOHTFy eefjsO"
        >
          photo.jpg
           | 
          image/jpeg
           · 
          4 B
           · Canon M50
           · 01.01.2020, 03:00:00
           · 1.000000, 2.000000 · 3m
        </div>
      </div>
      <button
        class="sc-dLMFT ePPioQ"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;
